--- a/nb_bow.ipynb
+++ b/nb_bow.ipynb
@@ -264,6 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Written based on pseudocode at https://web.stanford.edu/~jurafsky/slp3/4.pdf\n",
     "class NaiveBayesBoWClassifier:\n",
     "    def __all_vocab(self, X_train):\n",
     "        vocab = []\n",
