--- a/lda_qda.ipynb
+++ b/lda_qda.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis, QuadraticDiscriminantAnalysis\n",
-    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.feature_selection import f_classif, SelectKBest\n",
     "from sklearn.model_selection import train_test_split"
    ]
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,8 +281,6 @@
     "    y = df['stars'].replace([1, 2],0).replace([3, 4, 5], 1)\n",
     "    X_train, X_test, y_train, y_test = train_test_split(\n",
     "        X, y, test_size=0.2, random_state=1)\n",
-    "\n",
-    "    from sklearn.feature_selection import SelectKBest, f_classif\n",
     "\n",
     "    tfidf_vectorizer = TfidfVectorizer()\n",
     "    X_train_tfidf = tfidf_vectorizer.fit_transform(X_train.text)\n",
